tests/fail/elaboration/unsolved/fun-literal-param-type.snap
stdout = ''
stderr = '''
error: failed to infer named pattern type
  ┌─ tests/fail/elaboration/unsolved/fun-literal-param-type.fathom:3:5
  │
3 │ fun a => a
  │     ^ unsolved named pattern type

'''
